# SVRGDL

./: README.md
doc/demo/image_classification/cluster_train/internal/: cluster_train.md
doc/demo/image_classification/cluster_train/opensource/: cluster_train.md
doc/demo/sentiment_analysis/internal/: cluster_train.md
doc/demo/text_generation/internal/: cluster_train.md
main/: build.sh  paddle  paddle_main.jumbo.m4
paddle/: COMAKE  common_COMAKE  predict  tags
paddle/cuda/: COMAKE.include
paddle/gserver/gradientmachines/: GradientMachine.h  MultiGradientMachine.cpp
paddle/gserver/tests/: COMAKE
paddle/internals/: CMakeLists.txt  COMAKE.include  auto_codestyle.sh  run_regression_tests.sh  runtests.sh
paddle/internals/dserver/: CMakeLists.txt  COMAKE.include  DataClient.cpp  DataClient.h  DataServer.cpp  DataServer.h  DataServerMain.cpp
paddle/internals/dserver/test/: CMakeLists.txt  COMAKE  test_DataServer.cpp
paddle/internals/gserver/: CMakeLists.txt
paddle/internals/gserver/dataproviders/: CepstrumExtract.cpp  CepstrumExtract.h  ImageDataProvider.cpp  ImageDataProvider.h  ImageExtract.cpp  ImageExtract.h  LtrDataProvider.cpp  LtrDataProvider.h  SparseDataProvider.cpp  SparseDataProvider.h  SpeechDataProvider.cpp
paddle/internals/gserver/extension/: FcrCvmDataProvider.cpp  FcrCvmDataProvider.h
paddle/internals/gserver/gradientmachines/: AsgdSparseGradientMachine.cpp  AsgdSparseGradientMachine.h  BatchGradientMachine.cpp  BatchGradientMachine.h  FpgaNeuralNetwork.cpp  FpgaNeuralNetwork.h
paddle/internals/gserver/layers/: CheckLayer.cpp  CheckLayer.h  DataTrimLayer.cpp  DataTrimLayer.h  Fpga.h  FpgaDataLayer.cpp  FpgaFullyConnectedLayer.cpp  FpgaLayer.h  FullContextLayer.cpp  FullContextLayer.h  PerturbationLayer.cpp  PerturbationLayer.h
paddle/internals/gserver/tests/: CMakeLists.txt  COMAKE  test_FullContextLayer.cpp  test_SelectiveFCLayer.cpp
paddle/internals/gserver/tests/SelectiveFcTest/: dense_mul_list
paddle/internals/gserver/tests/SelectiveFcTest/conf/: fc.conf  selective_fc.conf
paddle/internals/math/: ImportanceSampler.cpp  ImportanceSampler.h  InterMatrix.h
paddle/internals/math/tests/: test_ImportanceSampler.cpp
paddle/internals/owlqn/: BatchRemoteParameterUpdater.cpp  BatchRemoteParameterUpdater.h  CMakeLists.txt  TrainerOWLQN.cpp  TrainerOWLQN.h
paddle/internals/parameter/: AsgdThreadUpdater.cpp  AsgdThreadUpdater.h  CMakeLists.txt  COMAKE.include
paddle/internals/regression_tests/: __init__.py  default.json  run_mnist_regression_tests.py  run_nmt_regression_tests.py  run_rnn_regression_tests.py  util.py
paddle/internals/regression_tests/conf/: chunking_rnn.conf  chunking_rnn.sparse.conf  mnist.conf  nmt.conf  nmt_gen.conf
paddle/internals/regression_tests/provider/: nmt_test.py
paddle/internals/scripts/build_scripts/: install_deps.jumbo.sh  preprocess_proto.sh
paddle/internals/trainer/: CMakeLists.txt  GenerateAnswer.cpp  GenerateSequence.cpp
paddle/internals/trainer/tests/: CMakeLists.txt  config_parser_test.py  sample_trainer_config_image.conf
paddle/math/: BaseMatrix.cu  BaseMatrix.h  COMAKE.include
paddle/math/tests/: COMAKE
paddle/parameter/: .FirstOrderOptimizer.cpp.swp  .FirstOrderOptimizer.h.swp  .LearningRateScheduler.h.swp  COMAKE.include  FirstOrderOptimizer.h  ParameterOptimizer.cpp
paddle/parameter/tests/: COMAKE
paddle/pserver/: ParameterServer2.cpp  ParameterServer2.h
paddle/pserver/test/: COMAKE
paddle/trainer/: .ParameterUpdater.h.swp  .TrainerInternal.cpp.swp  CMakeLists.txt  RemoteParameterUpdaterVR.cpp  RemoteParameterUpdaterVR.h  Trainer.h  TrainerInternal.h  TrainerInternalVR.cpp  TrainerInternalVR.h  TrainerMainVR.cpp  TrainerVR.cpp  TrainerVR.h
paddle/trainer/tests/: .sample_trainer_config_rnn.conf.swp  COMAKE
paddle/utils/: COMAKE.include  GlobalConstants.cpp  GlobalConstants.h  enable_virtualenv.c
paddle/utils/tests/: COMAKE
proto/: .TrainerConfig.proto.swp  ParameterService.proto.m4  TrainerConfig.proto.m4
python/paddle/internals/: config_parser.py  config_parser_metric.py  pyDataProviderBase.py
python/paddle/trainer/: config_parser.py
python/paddle/trainer_config_helpers/: .optimizers.py.swp
python/paddle/trainer_config_helpers/tests/configs/protostr/: math_ops.protostr.non_file_config.unittest  projections.protostr.unittest  test_ntm_layers.protostr.non_file_config.unittest  test_split_datasource.protostr.unittest
